# ats_api

./: .dockerignore  .gitignore  Dockerfile  Pipfile  brackets.dio  db.sqlite3  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
automatic_tournament_system/: asgi.py  settings.py  urls.py  wsgi.py
errors/: exception_handlers.py
profiles/: admin.py  forms.py  models.py  permissions.py  serializer.py  services.py  urls.py  utils.py  views.py
profiles/migrations/: 0001_initial.py  0002_alter_profile_user_report.py  0003_alter_profile_user.py  0004_alter_profile_user.py
templates/registration/: password_reset.html  verify_email.html
tournaments/: admin.py  brackets.py  filters.py  generics_views.py  models.py  old_views.py  orm_functions.py  pagination.py  permissions.py  selectors.py  serializer.py  services.py  urls.py  utils.py  views.py
tournaments/migrations/: 0001_initial.py  0002_alter_tournament_content.py  0002_bracket_final_alter_bracket_type.py  0003_bracket_participants_from_group.py  0003_match_start_time.py  0004_alter_match_start_time.py  0005_bracket_advances_to_next_and_more.py  0006_remove_bracket_advances_to_next_swbracketsettings_and_more.py  0007_remove_groupbracketsettings_group_bracket_and_more.py  0008_tournament_start_time.py  0009_rename_matchresult_matchstate_and_more.py  0010_delete_matchparticipantinfo.py  0011_matchparticipantinfo.py  0012_participantresult.py  0013_matchparticipantinfo_participant_result.py  0014_remove_tournament_prize_and_more.py  0015_tournamenttype.py  0016_tournament_type.py  0019_anonymousbracket.py  (+5 more)
(+11 files in other folders)
