[project]
requires-python = ">=3.8"

[tool.ruff]
exclude = [
    "migrations",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "venv",
]

line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warning
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
]

ignore = [
    "E501",  # line too long
    "B006",  # mutable data structures for argument defaults
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"